# gnvitop

./: LICENSE  README.md  app.py  index.html  pyproject.toml
.github/workflows/: publish.yml
docs/: index.html
docs/superpowers/plans/: 2026-03-26-github-pages.md
docs/superpowers/specs/: 2026-03-26-github-pages-design.md
gnvitop/: __init__.py  __main__.py  cli.py  dashboard.py  db.py  server.py  tui.py
gpu_monitor/: __init__.py  __main__.py  cli.py  dashboard.py  server.py
