[build-system]
requires = ["setuptools>=64", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "gpu-monitor"
version = "0.1.0"
description = "Web-based GPU monitoring dashboard for remote servers via SSH"
readme = "README.md"
license = "MIT"
requires-python = ">=3.7"
authors = [
    {name = "Linwei94"},
]
keywords = ["gpu", "monitor", "nvidia", "ssh", "dashboard"]
classifiers = [
    "Development Status :: 4 - Beta",
    "Environment :: Console",
    "Environment :: Web Environment",
    "Intended Audience :: Developers",
    "Intended Audience :: Science/Research",
    "Intended Audience :: System Administrators",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Topic :: System :: Monitoring",
]
dependencies = [
    "flask>=2.0",
    "paramiko>=2.0",
]

[project.scripts]
gpu-monitor = "gpu_monitor.cli:main"

[project.urls]
Homepage = "https://github.com/Linwei94/GPU-monitor"
Repository = "https://github.com/Linwei94/GPU-monitor"
