[build-system]
requires = ["setuptools>=64", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "gnvitop"
version = "0.3.8"
description = "Global nvitop: web-based GPU monitoring dashboard for all your remote servers via SSH"
readme = "README.md"
license = "MIT"
requires-python = ">=3.7"
authors = [
    {name = "Linwei94"},
]
keywords = ["gpu", "monitor", "nvidia", "ssh", "nvitop", "dashboard", "nvidia-smi"]
classifiers = [
    "Development Status :: 4 - Beta",
    "Environment :: Console",
    "Environment :: Web Environment",
    "Intended Audience :: Developers",
    "Intended Audience :: Science/Research",
    "Intended Audience :: System Administrators",
    "Programming Language :: Python :: 3",
    "Topic :: System :: Monitoring",
]
dependencies = [
    "flask>=2.0",
    "paramiko>=2.0",
]

[project.scripts]
gnvitop = "gnvitop.cli:main"

[tool.setuptools.packages.find]
include = ["gnvitop*"]

[project.urls]
Homepage = "https://github.com/Linwei94/gnvitop"
Repository = "https://github.com/Linwei94/gnvitop"
Issues = "https://github.com/Linwei94/gnvitop/issues"
